--- a/ConsoleJobs/App.config
+++ b/ConsoleJobs/App.config
@@ -13,30 +13,30 @@
       <add key="UploadPath" value="C:\\AppLogs\\Securecode\\Uploads"/>
       <add key="cmdPath" value="C:\\Windows\\System32\\"/>
       <add key="gpgPath" value="C:\\Program Files\\WinGPG\\x86"/>
-      <add key="CardApp" value="Data Source=172.25.31.201,1490;Initial Catalog=EchanelsT24;Persist Security Info=false;User ID=echanelusr;Password=($98uyt1#@)"/>
-      <!--<add key="FEPConn" value ="data source=172.25.31.4;Database=realtime;User ID=transuser;Password=Tr@nsusr1;Trusted_Connection=False;"/>-->
-      <add key="FEPConn" value="Data Source=172.25.31.4;Initial Catalog=postcard;Persist Security Info=false;User ID=cardappuser;Password=($t*rl1ng)"/>
+      <add key="CardApp" value="Data Source=###.###.##.##,1490;Initial Catalog=EchanelsT24;Persist Security Info=false;User ID=####;Password=(####)"/>
+      <!--<add key="FEPConn" value ="data source=###.###.##.##;Database=realtime;User ID=####;Password=#####;Trusted_Connection=False;"/>-->
+      <add key="FEPConn" value="Data Source=###.###.##.##;Initial Catalog=postcard;Persist Security Info=false;User ID=####;Password=(####)"/>
       <!--<add key="Product_Name" value="GOMONEY_MASTER_CONTACTLESS|GOMONEY_MAIN|GOMONEY_VIRTUAL|SBP_VISA_CONTACTLESS|SBP_MASTER_FAREPAY|GOMONEY_MASTER_CONT"/>-->
       <add key="Product_Name" value="SBP_MASTER_ONEBANK"/>
-	    <add key="GoMoney_Base_Url" value="http://10.0.0.91/GoMoneyProxy/"/>
+	    <add key="GoMoney_Base_Url" value="http://###.###.##.##/GoMoneyProxy/"/>
       <add key="Endpoint" value="api/GetGoMoneyAcctDetails?input="/>
-      <add key="fioranoBaseUrl" value="http://172.18.4.77:1880/restgateway/services/EacbsEnquiry"/>
+      <add key="fioranoBaseUrl" value="http://###.###.##.##:1880/restgateway/services/EacbsEnquiry"/>
       <add key="acctDetUrl" value="GetAccountFullInfo"/>
       <add key="ftUrl" value="FundTransferNarrExt"/>
       <add key="ftRev" value="FundsTransferReversal"/>
       
-      <!--<add key="keyId" value="729D33DB27ED9CAF"/>
-      <add key="sftpHost" value="10.0.35.31"/>-->
-      <add key="keyId" value="38F741B32D5AE7EE"/>
-      <add key="sftpHost" value="172.25.30.9"/>
+      <!--<add key="keyId" value="7#####F"/>
+      <add key="sftpHost" value="###.###.##.##"/>-->
+      <add key="keyId" value="3#######EE"/>
+      <add key="sftpHost" value="###.###.##.##"/>
       <add key="sftpPort" value="22"/>
-      <add key="sftpUser"  value="csu.sterling"/>
-      <add key="sftpPwd" value="g4WVVjD7"/>
+      <add key="sftpUser"  value="#####ing"/>
+      <add key="sftpPwd" value="g4#####7"/>
       <add key="sftpPth" value="/VCAS Securecode/"/>
-      <add key="fMail" value="SecureCodeUploader@Sterling.ng"/>
-      <add key="mailHost"  value="172.18.2.11" />
-      <add key="recMail"  value="csu@Sterling.ng" />
-      <add key="cMail"  value="Cardservices@Sterling.ng" />
+      <add key="fMail" value="Se#####.ng"/>
+      <add key="mailHost"  value="###.###.##.##" />
+      <add key="recMail"  value="c#####ng" />
+      <add key="cMail"  value="C#####ng" />
     </appSettings>
   
     
